# geo2tsparql

./: README.md  configure.ac
src/: Makefile.am  dt-strpf.c  dt-strpf.h  geo2t.c  geo2t.yuck  instant.c  instant.h  nifty.h  range.c  range.h  t2geo.c  t2geo.yuck  tbox-norm.c  tbox-norm.yuck
test/: Makefile.am  geo2t_01.clit  geo2t_02.clit  geo2t_03.clit  norm_01.clit  norm_02.clit  norm_03.clit  norm_04.clit  norm_05.clit  norm_06.clit  norm_07.clit  norm_08.clit  norm_09.clit  norm_10.clit  norm_11.clit  norm_12.clit  norm_13.clit  norm_14.clit  norm_15.clit  norm_16.clit  t2geo_01.clit
